Uploaded image for project: 'Lustre'
  1. Lustre
  2. LU-16081

Memory leak on adding existing interface.

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: Minor Minor
    • Lustre 2.16.0
    • None
    • None
    • 3
    • 9223372036854775807

      In the function lnet_dyn_add_ni an lnet_ni structure is allocated. If the interface exists already in the same network the function returns with EEXISTS, but doesn't free the allocated memory.

            fsehr Frank Sehr (Inactive)
            fsehr Frank Sehr (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved: